alb.tf
resource "aws_security_group" "alb" {
  name        = "terraform_alb_security_group"
  description = "Terraform load balancer security group"
  vpc_id      = "${aws_vpc.vpc-dev.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic.
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags={
    Name = "terraform-example-alb-security-group"
  }
}

resource "aws_lb" "alb" {
  name               = "alb"
  load_balancer_type = "application"
  security_groups = ["${aws_security_group.alb.id}"]
  subnets    = aws_subnet.public.*.id
   
}

resource "aws_alb_target_group" "group" {
  name     = "terraform-example-alb-target"
  port     = "80"
  protocol = "HTTP"
  vpc_id   = "${aws_vpc.vpc-dev.id}"
  # Alter the destination of the health check to be the login page.
  health_check {
    healthy_threshold   = "3"
    unhealthy_threshold = "2"
    interval            = "20"
    protocol            = "HTTP" # <---- it has to be with quotes and uppercase
    matcher             = "200"
    timeout             = "10"
    path                = "/"
    port = "80"
  }
}

resource "aws_alb_listener" "listener_http" {
  load_balancer_arn = "${aws_lb.alb.arn}"
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = "${aws_alb_target_group.group.arn}"
    type             = "forward"
  }
}
